short term change to Makefiles to demonstrate how to compile on MacOS.

--- a/demos/Demo PMD Compression.ipynb
+++ b/demos/Demo PMD Compression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,8 +20,8 @@
     "# Plot & Video Dependencies\n",
     "import matplotlib.pyplot as plt\n",
     "from trefide.plot import pixelwise_ranks\n",
-    "from trefide.extras.util_plot import comparison_plot, correlation_traces, snr_per_frame, nearest_frame_corr\n",
-    "from trefide.video import write_mpl, play_cv2\n",
+    "#from trefide.extras.util_plot import comparison_plot, correlation_traces, snr_per_frame, nearest_frame_corr\n",
+    "#from trefide.video import write_mpl, play_cv2\n",
     "\n",
     "# Set Data Information\n",
     "dataset = \"Q-State Bio\"\n",
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,20 +121,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAABHgAAACXCAYAAABur+wHAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMS4xLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvAOZPmwAAH6VJREFUeJzt3XmYZXV95/H3h0UQWVoWFxoEGQkJ\nY8IiISYow2ISUIIkDyYQNWh0wBk1EhdcYlCZkAedBMFHx9giirKLoMS4RmXQUZFuwAUQRWRpQJoW\nGxoBsenv/HF+RV/KurV0V9etqvt+PU89dc85v3vO95zz66q63/7+fidVhSRJkiRJkuauDQYdgCRJ\nkiRJktaNCR5JkiRJkqQ5zgSPJEmSJEnSHGeCR5IkSZIkaY4zwSNJkiRJkjTHmeCRJEmSJEma40zw\nSJJmhSSfT3LMNOzn5iTPm6aYnpvkhunY10yZzvMfVtPVFyVJkmaSCR5J0oxpyYcHk9yf5K4kH02y\nOUBVHVpVZ63n438xyQk9ywuTVJ91T6mqr1fVbtMcwwFJVrdrsDLJDUlePp3HWB+S/HWSxS3uO1sS\n5DmDjmt9WF99McnHkjzcruHI11+t4z6XJjlgmkIca/9PSXJ+u+f3Jvl6kt/v2Z4kJya5Ncl9Sc4d\n+Tfdtr83yY2tr1+f5MUTHO8lSW5p1+biJAvW17lJkjTfmOCRJM20P6uqzYG9gd8H3j6Dx74c+G89\ny/sDPxxj3Y+r6mfrMY472jXYEvh74MNJpjWRNJ2SvB44Dfhn4MnA04D/A7xwwHFtNMjjr6X3VNXm\nPV8XDCqQSV6/zYFvA3sBWwPnAv+RZLO2/W+Bo4A/BBbS9enTe95/P/ACYKvW9gNJ9u0Tz+/R9asX\nA08Bfg28f2pnJUnS8DLBI0kaiKq6Hfg88EyAJJcleWV7/cEkF420TfLuJF9JkrZ8WJJrkqxI8s32\nwXAyLgf2SzLy+++5dImLfUatu7wd54AkS3vieHOS23sqbw5u6zdI8pYkP0ny8yQXJtl6Etegqupz\nwD3Ao+eQ5PQkt7WKiCVJntuz7Z1t/x9vcVybZJ+x9p/kt5P8NMlR48U/niRbAScBr66qi6vql1X1\n66r696p6U2uzSZLTktzRvk5LsknvNUxyQpJlrRLkiCTPT/KjJPckeduo87soyQUtzquS7NGz/eZ2\nHt8DfplkoyTbJ/lUkrvb+f5dT/t9W+XRfemqxk5t6zdNcna7XyuSXJnkyW1bb1/cIMnbW1XJsnbd\nt2rbdk5X7XVMq2BZnuQfJrqmfa7z25Pc1HNPDx+1/bgkP2zbf5BkjyTnAdsDn28VL69vbY9o+1iR\n5KvpSR62e/GmJN8HHpgorqq6sapOq6qfVdUjVfVB4AnArq3JnwEfrqrbq2ol8B7g6CSbtvf/Y1Xd\nUFWrq+pbwDfpkkFjeQnw6ar6RlXdD5wIvChrkkmSJGkcJngkSQORZEfg+cDVY2x+A/B7SV7Wkhuv\nAI6pqkqyN3AmcBywDfAh4NKRhMIEvgNsAowkDPYHvgzcOGrd5WPEuxvwGuD3q2oL4E+Bm9vmvwOO\noKsE2h74BfCBiYJpyYPDgW1bDCOuBPZkTcXEJ0c+MDeHA+cDC4BLGaPKoV2nLwGvrarzJ4h/PH8I\nbApcMk6bfwCe3WLeA9iXx1ZmPaXtYyHdh/YP032YfxZdQu3EJLv0tH8h8EnWnP+nk2zcs/1ouqqQ\nBcBq4N+B77b9Hwwcn+RPW9vTgdOrakvgvwAXtvXH0FWV7EjXj14FPDjGub2sfR0I7EJX0TL6ej8H\n2K0d+8QkvzPWRZrAj4D9WkwnA+f2JJyOprueL6arkPkL4J6qOhq4Azi0VQOd2o59NvBaYDvgP4F/\nH3X9jgIObcciyYeSvG8yQbZkYoCbRla1L3qWH093rUe/dzNgH+DaPrv/r3T3EYCquoHu/u7ap70k\nSephgkeSNNM+nWQF8A3g/9IN+3mMqnqALgFwKu3DalWNVNL8d+BDVXVFqyg4C/gVXYJhXFX1K+AK\nYP9WYbOgqm4Cvt6zbvcW12iP0CWHdk+ycVXdXFU/aduOA/6hqpa2Y7wTODL9h8Bs367Bg3SJk9dX\n1aOJrqo6u6p+XlWrqupf23F7h3B9o6o+V1WPAJ9gTXJqxHPpEj/HVNVnJxH/eLYBllfVqnHavBg4\nqaqWVdXdwLuAl/Zs/zVwclX9mi4xtS1d0mVlVV1L94G/twprSVVd1NqfSpcc6r2/76uq26rqQbph\nfttV1UlV9XC7nx+mS2KMHPsZSbatqvur6ts967cBntH60ZKquq/PuZ1aVTe1qpK3AkeNurfvqqoH\nq+q7dAmK0fej1xtbZc2KJMtHVlbVhVV1Z6t0OZcu+TZSmfVK4JQWY1XVj6rqtj77Pwq4tKq+2q7f\nKXRJoT/oaXN666sPtmMfV1V/N8a+HqNVLp0FvKNV60BXhXdskp3SzZczMp/VZqPeG2AR8J2q+s8+\nh9gcuHfUuvuALSaKTZIkmeCRJM28I6pqQVXtVFX/c+RD5mhV9R26KoGwpuoCYCfgDT0fklfQVWFs\nP3ofeexktk9rqy+nq9J5Ll2SifZ9ZN1tVXXLGPHcCBxPl7xZlm7i2ZFj7gRc0hPP9XQJlSf3uQZ3\nVNUCug/e7wMOGhX3G9JNSHtv299WdEmREb3zAz0AbDoq4fAq4JtV9bVJxj+enwPbjpOsgu7a916z\nW3js/fh5S0bBmiqZu3q2P0j34X7Eo8mLqloNLB21v97kxk60hFnP9X8ba679K4DfAn7YhmEd1tZ/\nAvgicH66YWXvGVXlMt65bcRj7+3o+9F7LqP9S+v/C6rq0XvaqtW+23MOv82ae74jMJlk3G/E23P9\nFva06Zcc6ivJE4D/AC6vqv/ds+nDwEV0/66+D3ylrV/62D1wKt19OHqcw9xP92+i15bAyjHaSpKk\nUUzwSJJmpSSvpqs4uYM1VQHQfTg9uedD8oKq2qyqzhu9j1GT2d7aVl9Ol8jZn65yB+D/0Q2PGXN4\nVs/+zq2q59AlFQp4d09Mh46KadPq5hnqq1X7vBn43SRHtPN+blv3l8ATWyLoXh47DGYirwKeluS9\nk4x/PN8CHqIbgtbPHW2fI57W1q2tHUdepJsbaYdR+6ue17cBPx117beoqucDVNWP21CmJ9Gd70VJ\nnlDdPELvqqrdgT8CDgP+ZpLntorHJqjWSRue9kHgfwDbtHv+Q9bc89sYY8hTU6OWHxNvz/W7fZz3\nTBTfpsBn6BKu//MxB++qn97eErY7trhvoyfpleRkuuFrh/RU/ozlWnqqn5L8Ft3fqj+eSrySJA0r\nEzySpFmnfbD7J7phWi8FTkiyZ9v8YeBVSf4gnSckeUGSyQ7j+Cbd3C0voSV4quoXwN1t3ZgJniS7\nJTmozfXzEF3VyUhVyr8BJyfZqbXdLsmknjBVVQ8D/0o3Nw10w1FWtXg2SnIiv1nVMJGVwCF0w85O\nmSj+dBMhj/mhv6rubbF9oE3eu1mSjZMcmuQ9rdl5wNvbeW/b2p89xZh7PSvJX7SqoePphuB9u0/b\n7wD3pZt4+fFJNkzyzLRHead77PZ2rZJlRXvPI0kOTPK7STakGwb0a9bcz17nAX+f5OnpHv/9z8AF\nEwxZm6rN6ZIud3ch55V0FTwjzqD7N7BX6/O7ppvDCrpEU+/8RRcCh7d7ujHwJrr+cMXaBJbkccDF\ndEnGl1dVjdq+bZJdWlzPBP4FeOdIuyT/CBwJ/HFV3TPB4c4GjkjyR61i6CTgk9UN2ZQkSRMwwSNJ\nmlXah/qzgXdX1Xer6sd0Q24+kWSTqlpMNw/P++kmM76RbhLcSWkfFpfQVQf9oGfT1+mqPPpV8GxC\nN5/JcrrqhCe1uKCbyPdS4EtJVtIlI/5grJ30cSZdxc2f0Q0b+jzdpLu30CVjpjykpqpWAH8MHJrk\nf00Q/450lTr99nUq8Hq6iX7vbvG8Bvh0a/JPwGLge3TDdK5q69bWZ4C/oru/LwX+os0nM1Zsj9A9\nyWlP4Kd053cGbQJhukTXtUnup7tPR1XVQ3QTP19El9y5nm7epbGSUmfSDee6vO3/IboJjKdNVX2P\nbqjed4A76ZI7V/RsP4+u+uiCFu/FwBPb5n8G3tWGdh3f5jQ6hq4i6G668z+83/UDSHJGkn6PI38u\n3YTMhwL39gx5HHkS1nbAF4BfAp+lmx/rzLbfDemSNDsDP+l57wkj23v31a7Da+jmaVpG12en9VpL\nkjSfZdR/xEiSpCGT5Ay6SokvzoJY3kk38fFLBh2LJEnSXDLehImSJGkIVNUrBx2DJEmS1o1DtCRJ\nkiRJkmahJH+f5NokP0hyXnv4wdht12WIVpJD6MazbwicUVWnrPXOJEmSJEmSBECShcA3gN2r6sEk\nFwKfq6qPjdV+rSt42sR5H6CbdG934Ogku6/t/iRJkiRJkvQYGwGPbw8i2Qy4o1/DdRmitS9wY1Xd\n1B7xej4wqUfCSpIkSZIkqb+quh34F+BWuidt3ltVX+rXfl0mWV7IYx/bupQxHgmb5Fjg2Lb4rHU4\n3qyz6aZ9h75pFnjooYcGHcK0mm/9bfvttx90CJrAFltsMegQptXKlSsHHcK0WrFixaBDmFYLFiwY\ndAjTar7dn/nmgQceGHQI02qzzTYbdAjTar79PID593fpfDPf7s8999wz6BCm2/Kq2g7gkEMOqeXL\nlw86nmmzZMmSa4HeDrioqhaNLCR5Il0hzdOBFcAnk7ykqs4ea3/rkuDJGOt+Y0KfFtyiFty8eib7\nLrvsMugQNI7rrrtu0CFMq/nW30466aRBh6AJHHjggYMOYVp97WtfG3QI0+qSSy4ZdAjT6s///M8H\nHcK0mm/3Z765+uqrBx3CtNprr70GHcK0mm8/DwCuvfbaQYegcfzoRz8adAjT6pxzzhl0CNPtlpEX\ny5cv58orrxxkLNNqgw02eKiq9hmnyfOAn1bV3QBJLgb+CJj2BM9SYMee5R0YZyyYJEmSJEnSuliX\nB0XNQbcCz06yGfAgcDCwuF/jdUnwXAnsmuTpwO3AUcBfr8P+JEmSJEmSxlRVrF69etBhzJiquiLJ\nRcBVwCrgatoIqbGsdYKnqlYleQ3wRbrHpJ9ZVdYeSpIkSZKk9WLIKnioqncA75hM23Wp4KGqPgd8\nbl32IUmSJEmSNBnDluCZinVK8EiSJEmSJM0UEzz9meCRJEmSJElzggme/kzwSJIkSZKkWa+qTPCM\nwwSPJEmSJEmaE4bpKVpTZYJHkiRJkiTNCVbw9GeCR5IkSZIkzQnDlOBJshtwQc+qXYATq+q0sdqb\n4JEkSZIkSbPesM3BU1U3AHsCJNkQuB24pF97EzySJEmSJGlOGKYEzygHAz+pqlv6NTDBI0mSJEmS\n5oQhnmT5KOC88RqY4JEkSZIkSbNeVc23BM+2SRb3LC+qqkWjGyV5HHA48NbxdmaCR5IkSZIkzQnz\nLMGzvKr2mUS7Q4Grququ8RqZ4JEkSZIkSXPCkM7BczQTDM8CEzySJEmSJGkOmIdDtCaUZDPgj4Hj\nJmprgkeSJEmSJM0Jw5bgqaoHgG0m09YEjyRJkiRJmvWGsYJnKkzwSJIkSZKkOcEET38meCRJkiRJ\n0pwwpJMsT8qECZ4kOwIfB54CrKZ7LvvpSbYGLgB2Bm4G/rKqfrH+QpUkSZIkScPKIVrjm0wFzyrg\nDVV1VZItgCVJvgy8DPhKVZ2S5C3AW4A3r79QJUmSJEnSMDPB09+ECZ6quhO4s71emeR6YCHwQuCA\n1uws4DJM8EiSJEmSpPXEBE9/U5qDJ8nOwF7AFcCTW/KHqrozyZP6vOdY4Nh1C1OSJEmSJA2zqhq6\nOXiSLADOAJ4JFPC3VfWtsdpOOsGTZHPgU8DxVXVfkkm9r6oWAYvaPobrTkiSJEmSpGnzyCOPDDqE\nmXY68IWqOjLJ44DN+jWcVIInycZ0yZ1zquritvquJE9t1TtPBZata9SSJEmSJEljGbZJlpNsCexP\nNwcyVfUw8HC/9pN5ilaAjwDXV9WpPZsuBY4BTmnfP7PWUUuSJEmSJE1gniV4tk2yuGd5URsFNWIX\n4G7go0n2AJYAr6uqX461s8lU8OwHvBT4fpJr2rq30SV2LkzyCuBW4EVTOw9JkiRJkqTJm2cJnuVV\ntc842zcC9gZeW1VXJDmd7gnm/9iv8biq6htAvwl3Dp7o/ZIkSZIkSeuqqoZtDp6lwNKquqItX0SX\n4BnTlJ6iJUmSJEmSNCjD9BStqvpZktuS7FZVN9AV2VzXr70JHkmSJEmSNOsNYQUPwGuBc9oTtG4C\nXt6voQkeSZIkSZI0J8yzOXgmVFXXAOPN0/MoEzySJEmSJGnWG7bHpE+VCR5JkiRJkjQnmODpzwSP\nJEmSJEmaE0zw9GeCR5IkSZIkzXpDOsnypJngkSRJkiRJc8IwPSZ9qkzwSJIkSZKkWa+qWLVq1aDD\nmLVM8EiSJEmSpFlvGIdoJbkZWAk8Aqyqqr6PTDfBI0mSJEmS5oRhS/A0B1bV8okameCRJEmSJEmz\n3jBW8EyFCR5JkiRJkjQnzLMEz7ZJFvcsL6qqRaPaFPClJAV8aIztjzLBI0mSJEmSZr15WMGzfLw5\ndZr9quqOJE8Cvpzkh1V1+VgNTfBIkiRJkqQ5YfXq1YMOYUZV1R3t+7IklwD7AiZ4JEmSJEnS3DRs\nj0lP8gRgg6pa2V7/CXBSv/YmeCRJkiRJ0qxXVcNWwfNk4JIk0OVvzq2qL/RrPOkET5INgcXA7VV1\nWJKnA+cDWwNXAS+tqofXJXJJkiRJkqSxDFsFT1XdBOwx2fZTqeB5HXA9sGVbfjfw3qo6P8m/Aa8A\nPjiF/UmSJEmSJE3akFXwTMmkEjxJdgBeAJwMvD5dfdBBwF+3JmcB72SCBM/222/Pcccdt9bBSlNx\nwQUXDDoEaU7beuutBx3CtLr22msHHYLGceKJJw46hGm11157DToEDZE3velNgw5hWt14442DDkGa\n03bfffdBhzCtrrvuukdfD1sFz1RNtoLnNOAEYIu2vA2woqpGruxSYOFYb0xyLHAswFZbbbX2kUqS\nJEmSpKE2zx6TPq0mTPAkOQxYVlVLkhwwsnqMpjXW+6tqEbAIYOHChWO2kSRJkiRJGk9VmeAZx2Qq\nePYDDk/yfGBTujl4TgMWJNmoVfHsANyx/sKUJEmSJEnDzjl4+pswwVNVbwXeCtAqeN5YVS9O8kng\nSLonaR0DfGY9xilJkiRJkoaYFTzjm8pTtEZ7M3B+kn8CrgY+Mj0hSZIkSZIkPdawJniSbAgsBm6v\nqsP6tZtSgqeqLgMua69vAvZd+xAlSZIkSZImb0iHaL0OuJ5uypy+1qWCR5IkSZIkaUYMYwVPkh2A\nFwAnA68fr60JHkmSJEmSNCfMswqebZMs7lle1J5E3us04ARgi4l2ZoJHkiRJkiTNelXFqlWrBh3G\ndFpeVfv025jkMGBZVS1pD70alwkeSZIkSZI0J8yzCp6J7AccnuT5wKbAlknOrqqXjNXYBI8kSZIk\nSZr1hm0Onqp6K/BWgFbB88Z+yR0wwSNJkiRJkuaIIavgmRITPJIkSZIkadYbtgqeXlV1GXDZeG1M\n8EiSJEmSpDlhWBM8k2GCR5IkSZIkzXrDXMEzGSZ4JEmSJEnSnOAcPP2Z4JEkSZIkSbOeFTzjM8Ej\nSZIkSZLmBCt4+jPBI0mSJEmSZr2qMsEzDhM8kiRJkiRpThimIVpJNgUuBzahy99cVFXv6NfeBI8k\nSZIkSZr1hrCC51fAQVV1f5KNgW8k+XxVfXusxiZ4JEmSJEnSnDBMFTxVVcD9bXHj9lX92pvgkSRJ\nkiRJs948rODZNsninuVFVbWot0GSDYElwDOAD1TVFf12NqkET5IFwBnAM+myRX8L3ABcAOwM3Az8\nZVX9YtKnIUmSJEmSNElVxapVqwYdxnRaXlX7jNegqh4B9mx5mUuSPLOqfjBW28lW8JwOfKGqjkzy\nOGAz4G3AV6rqlCRvAd4CvHnSpyFJkiRJkjQF86yCZ9KqakWSy4BDgLVL8CTZEtgfeFnb6cPAw0le\nCBzQmp0FXIYJHkmSJEmStB5U1VDNwZNkO+DXLbnzeOB5wLv7tZ9MBc8uwN3AR5PsQTf263XAk6vq\nToCqujPJk/oEdCxwLMBWW201lXORJEmSJEl61JBV8DwVOKvNw7MBcGFVfbZf48kkeDYC9gZeW1VX\nJDmdbjjWpLQJghYBLFy4sO9sz5IkSZIkSf3Mwzl4xlVV3wP2mmz7ySR4lgJLe2ZqvoguwXNXkqe2\n6p2nAsumHK0kSZIkSdIkDNsQramaMMFTVT9LcluS3arqBuBg4Lr2dQxwSvv+mfUaqSRJkiRJGmom\nePqb7FO0Xguc056gdRPwctr4rySvAG4FXrR+QpQkSZIkScNu2IZoTdWkEjxVdQ0w1rPZD57ecCRJ\nkiRJkn6TQ7TGN9kKHkmSJEmSpIGygqc/EzySJEmSJGnWG7YKniQ7Ah8HngKsBhZV1en92pvgkSRJ\nkiRJs94QzsGzCnhDVV2VZAtgSZIvV9V1YzU2wSNJkiRJkuaEYargqao7gTvb65VJrgcW0j3V/DeY\n4JEkSZIkSbPeEFbwPCrJzsBewBX92pjgkSRJkiRJs948nINn2ySLe5YXVdWi0Y2SbA58Cji+qu7r\ntzMTPJIkSZIkadabhxU8y6tqn/EaJNmYLrlzTlVdPF5bEzySJEmSJGlOmGcVPONKEuAjwPVVdepE\n7U3wSJIkSZKkWW8eDtGayH7AS4HvJ7mmrXtbVX1urMYmeCRJkiRJ0pwwTAmeqvoGkMm2N8EjSZIk\nSZJmvapi9erVgw5j1jLBI0mSJEmSZr15OMnytDLBI0mSJEmS5gQrePozwSNJkiRJkma9IZxkeUpM\n8EiSJEmSpDnBBE9/JngkSZIkSdKsZwXP+EzwSJIkSZKkOWGYEjxJzgQOA5ZV1TMnam+CR5IkSZIk\nzXpDWMHzMeD9wMcn09gEjyRJkiRJmhOG6SlaVXV5kp0n294EjyRJkiRJmvWqilWrVg06jFkrVTVz\nB0tWAjfM2AE1m20LLB90EBo4+4HAfqCO/UAj7AsC+4E69gMB7FRV2wEk+QJdv5gvNgUe6lleVFWL\nehu0Cp7PzsY5eG6oqn1m+JiahZIsti/IfiCwH6hjP9AI+4LAfqCO/UCjVdUhg45hNttg0AFIkiRJ\nkiRp3ZjgkSRJkiRJmmWSnAd8C9gtydIkrxiv/UwP0Vo0cRMNCfuCwH6gjv1AYD/QGvYFgf1AHfuB\nhlpVHT2V9jM6ybIkSZIkSZKmn0O0JEmSJEmS5rgZS/AkOSTJDUluTPKWmTquZl6SM5MsS/KDnnVb\nJ/lykh+3709s65Pkfa1ffC/J3oOLXNMpyY5Jvpbk+iTXJnldW29fGCJJNk3ynSTfbf3gXW3905Nc\n0frBBUke19Zv0pZvbNt3HmT8ml5JNkxydZLPtmX7wRBKcnOS7ye5Jsnits7fDUMmyYIkFyX5Yftb\n4Q/tB8MlyW7t58DI131JjrcfSGtvRhI8STYEPgAcCuwOHJ1k95k4tgbiY8Dox9e9BfhKVe0KfKUt\nQ9cndm1fxwIfnKEYtf6tAt5QVb8DPBt4dft3b18YLr8CDqqqPYA9gUOSPBt4N/De1g9+AYxMGPcK\n4BdV9Qzgva2d5o/XAdf3LNsPhteBVbVnz+OP/d0wfE4HvlBVvw3sQfezwX4wRKrqhvZzYE/gWcAD\nwCXYD6S1NlMVPPsCN1bVTVX1MHA+8MIZOrZmWFVdDtwzavULgbPa67OAI3rWf7w63wYWJHnqzESq\n9amq7qyqq9rrlXR/uC3EvjBU2v28vy1u3L4KOAi4qK0f3Q9G+sdFwMFJMkPhaj1KsgPwAuCMthzs\nB1rD3w1DJMmWwP7ARwCq6uGqWoH9YJgdDPykqm7BfiCttZlK8CwEbutZXtrWaXg8uaruhO6DP/Ck\ntt6+MQTa8Iq9gCuwLwydNiznGmAZ8GXgJ8CKqlrVmvTe60f7Qdt+L7DNzEas9eQ04ARgdVveBvvB\nsCrgS0mWJDm2rfN3w3DZBbgb+GgbtnlGkidgPxhmRwHntdf2A2ktzVSCZ6z/dfPxXQL7xryXZHPg\nU8DxVXXfeE3HWGdfmAeq6pFWfr0DXUXn74zVrH23H8xDSQ4DllXVkt7VYzS1HwyH/apqb7rhFq9O\nsv84be0L89NGwN7AB6tqL+CXrBmGMxb7wTzW5l87HPjkRE3HWGc/kHrMVIJnKbBjz/IOwB0zdGzN\nDneNlFC278vaevvGPJZkY7rkzjlVdXFbbV8YUq38/jK6OZkWJNmobeq914/2g7Z9K35zyKfmnv2A\nw5PcTDdM+yC6ih77wRCqqjva92V0823si78bhs1SYGlVXdGWL6JL+NgPhtOhwFVVdVdbth9Ia2mm\nEjxXAru2p2U8jq4E79IZOrZmh0uBY9rrY4DP9Kz/mzYr/rOBe0dKMjW3tfkyPgJcX1Wn9myyLwyR\nJNslWdBePx54Ht18TF8DjmzNRveDkf5xJPDVqvJ/5+a4qnprVe1QVTvT/Q3w1ap6MfaDoZPkCUm2\nGHkN/AnwA/zdMFSq6mfAbUl2a6sOBq7DfjCsjmbN8CywH0hrLTP191KS59P9b92GwJlVdfKMHFgz\nLsl5wAHAtsBdwDuATwMXAk8DbgVeVFX3tCTA++meuvUA8PKqWjyIuDW9kjwH+DrwfdbMufE2unl4\n7AtDIsnv0U2QuCHdfypcWFUnJdmFrpJja+Bq4CVV9askmwKfoJuz6R7gqKq6aTDRa31IcgDwxqo6\nzH4wfNo9v6QtbgScW1UnJ9kGfzcMlSR70k26/jjgJuDltN8T2A+GRpLN6ObV2aWq7m3r/HkgraUZ\nS/BIkiRJkiRp/ZipIVqSJEmSJElaT0zwSJIkSZIkzXEmeCRJkiRJkuY4EzySJEmSJElznAkeSZIk\nSZKkOc4EjyRJkiRJ0hxngkeSJEmSJGmOM8EjSZIkSZI0x/1/wc9NoWnGxpMAAAAASUVORK5CYII=\n",
-      "text/plain": [
-       "<matplotlib.figure.Figure at 0x7f4329859ac8>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "pixelwise_ranks(block_ranks, fov_height, fov_width, num_frames, block_height, block_width)"
    ]
