Streamlining & organizing makefiles. Adding options to compile c/c++/cython code with gcc/g++ instead of icc/icpc. Adding icc/icpc as default installation option without the need to explicitly set environment variables (simplifying install instructions).

--- a/demos/Matrix_Decomposition/Demo PMD Compression & Denoising.ipynb
+++ b/demos/Matrix_Decomposition/Demo PMD Compression & Denoising.ipynb
@@ -94,9 +94,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'determine_thresholds' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-7713270bb8d3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m spatial_thresh, temporal_thresh = determine_thresholds((fov_height, fov_width, num_frames),\n\u001b[0m\u001b[1;32m      2\u001b[0m                                                        \u001b[0;34m(\u001b[0m\u001b[0mblock_height\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mblock_width\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m                                                        \u001b[0mconsec_failures\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmax_iters_main\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m                                                        \u001b[0mmax_iters_init\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtol\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m                                                        d_sub, t_sub, 5, True)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'determine_thresholds' is not defined"
+     ]
+    }
+   ],
    "source": [
     "spatial_thresh, temporal_thresh = determine_thresholds((fov_height, fov_width, num_frames),\n",
     "                                                       (block_height, block_width),\n",
@@ -107,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,11 +160,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "mov_denoised = np.reshape(U.dot(V), (fov_height, fov_width, num_frames), order='F')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from timeit import timeit as timeit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "25.97212006058544"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def reconstruct():\n",
+    "    return U.dot(V)\n",
+    "\n",
+    "timeit(reconstruct, number=10)"
    ]
   },
   {
@@ -183,15 +227,6 @@
    ],
    "source": [
     "np.prod(mov.shape) / (len(U.data) + np.prod(V.shape))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from timeit import timeit as timeit"
    ]
   },
   {
