Simulating thresholds using new format with more options.

--- a/demos/Matrix_Decomposition/Demo PMD Compression & Denoising.ipynb
+++ b/demos/Matrix_Decomposition/Demo PMD Compression & Denoising.ipynb
@@ -14,7 +14,7 @@
     "from trefide.utils import psd_noise_estimate\n",
     "\n",
     "# PMD Model Dependencies\n",
-    "from trefide.pmd import blockwise_decompose, format_as_matrices\n",
+    "from trefide.pmd import blockwise_decompose, format_as_matrices, simulate_thresholds\n",
     "\n",
     "# Plotting & Video Rendering Dependencies\n",
     "import matplotlib.pyplot as plt\n",
@@ -96,34 +96,20 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'determine_thresholds' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-4-7713270bb8d3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m spatial_thresh, temporal_thresh = determine_thresholds((fov_height, fov_width, num_frames),\n\u001b[0m\u001b[1;32m      2\u001b[0m                                                        \u001b[0;34m(\u001b[0m\u001b[0mblock_height\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mblock_width\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m                                                        \u001b[0mconsec_failures\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmax_iters_main\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m                                                        \u001b[0mmax_iters_init\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtol\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m                                                        d_sub, t_sub, 5, True)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'determine_thresholds' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "spatial_thresh, temporal_thresh = determine_thresholds((fov_height, fov_width, num_frames),\n",
-    "                                                       (block_height, block_width),\n",
-    "                                                       consec_failures, max_iters_main, \n",
-    "                                                       max_iters_init, tol, \n",
-    "                                                       d_sub, t_sub, 5, True)"
+    "thresholds, spatial_components, temporal_components = simulate_thresholds(\n",
+    "    block_height, block_width, num_frames, 120, 12, consec_failures,\n",
+    "    max_iters_main, max_iters_init, tol, d_sub, t_sub, 5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "spatial_thresh, temporal_thresh = (1.11, 1.74)"
+    "spatial_thresh, temporal_thresh = thresholds"
    ]
   },
   {
@@ -135,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
