--- a/demos/Matrix_Decomposition/Demo PMD Compression & Denoising.ipynb
+++ b/demos/Matrix_Decomposition/Demo PMD Compression & Denoising.ipynb
@@ -75,7 +75,7 @@
     "# Set Blocksize Parameters\n",
     "block_height = 40\n",
     "block_width = 40\n",
-    "overlapping = True"
+    "overlapping = False"
    ]
   },
   {
@@ -94,18 +94,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "thresholds, spatial_components, temporal_components = simulate_thresholds(\n",
+    "thresholds, spatial_stats, temporal_stats = simulate_thresholds(\n",
     "    block_height, block_width, num_frames, 120, 12, consec_failures,\n",
     "    max_iters_main, max_iters_init, tol, d_sub, t_sub, 5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,139 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.1080989009435314"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "spatial_thresh"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.7341713694001475"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temporal_thresh"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from trefide.pmd import apply_recombination_weights"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spatial_components = np.ones(len(spatial_components))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spatial_components = np.zeros(len(spatial_components))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for bdx in range(metadata['format']['num_blocks']):\n",
+    "    block_index = metadata['format']['format_indices'][bdx * 2]\n",
+    "    block_size = metadata['format']['dims'][bdx * 2] * metadata['format']['dims'][bdx * 2 + 1]\n",
+    "    for k in range(metadata['format']['ranks'][bdx]):\n",
+    "        cdx = block_index + k * block_size\n",
+    "        spatial_components[cdx:cdx+block_size] = 1 / metadata['format']['ranks'][bdx]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([False, False, False, False, False, False, False, False, False,\n",
+       "       False, False, False, False, False, False, False, False, False,\n",
+       "       False, False, False, False, False, False, False, False, False,\n",
+       "       False, False, False, False, False, False, False, False, False,\n",
+       "       False, False, False, False,  True, False, False, False, False,\n",
+       "       False, False, False, False, False, False, False, False, False,\n",
+       "       False, False, False, False, False, False, False, False, False,\n",
+       "       False, False, False, False, False, False, False, False, False,\n",
+       "       False, False, False, False, False, False, False, False,  True,\n",
+       "       False,  True, False, False, False, False, False, False, False,\n",
+       "        True, False, False, False, False, False,  True, False, False,\n",
+       "       False, False, False, False, False, False, False, False, False,\n",
+       "       False, False, False, False, False, False,  True, False, False,\n",
+       "       False, False, False, False,  True, False,  True,  True, False,\n",
+       "       False, False, False, False, False, False, False, False, False,\n",
+       "       False, False, False, False,  True, False, False,  True, False,\n",
+       "       False,  True, False, False, False, False, False, False, False,\n",
+       "       False, False, False,  True, False, False, False, False, False,\n",
+       "       False, False, False, False, False, False, False, False, False,\n",
+       "       False, False, False, False, False, False, False, False, False,\n",
+       "       False,  True, False, False,  True, False, False, False, False,\n",
+       "       False, False, False, False, False, False, False,  True, False,\n",
+       "       False, False, False, False,  True, False, False])"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.asarray(metadata['format']['ranks']) == 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "apply_recombination_weights(metadata, spatial_components)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +278,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXoAAABECAYAAACPp/75AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMS4xLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvAOZPmwAACDFJREFUeJzt3V2MVGcdx/Hvz4WFQrGU12wBXUiQ\n2IuWkg0FMY1a+0ZM8aIaiImY1JD4kli9MBATk15qjGlMjJVoDTGWUmuxhLRuCa03XvDWAl3KS7ft\nWtalLEX7Ek204N+L8wyMyy677Jw5e/bs75Ns5pxnzuT57TzP/HfmmTM7igjMzKy6PjLWAczMrLlc\n6M3MKs6F3sys4lzozcwqzoXezKziXOjNzCquoUIv6V5JJyV1S9qcVygzM8uPRnsevaQW4BRwF9AL\nHAA2RMSr+cUzM7NGNfKMfiXQHRFvRMR/gCeAdfnEMjOzvExq4LYLgNN1+73A7Ve7wZxZLdG+aHID\nXdpEdOrotGGP+cQt/yogSTWM5P4sg+HGdCLNi0NH//1ORMwd7e0bKfQapO2KdSBJm4BNAB9bMIn9\nnYsa6NImontuWj7sMZ2dhwtIUg0juT/LYLgxnUjzoqWt+6+N3L6RpZteoL5qLwT6Bh4UEVsjoiMi\nOubObmmgOzMzG41GCv0BYKmkxZJagfXArnximZlZXka9dBMRFyR9G+gEWoDHIuJYbsnMzCwXjazR\nExHPAs/mlMXMzJrAn4w1M6s4F3ozs4praOnGxtZ4OU2uUZ19jZ8il8d9lUeOMiji9yhiblZlPIrg\nZ/RmZhXnQm9mVnEu9GZmFedCb2ZWcS70ZmYV50JvZlZxLvRmZhXnQm9mVnH+wJSNuSI++OIP1+Rr\nonxYrypGVOgl9QAfABeBCxHRIWkWsANoB3qAL0fEP5oT08zMRutalm4+GxHLI6Ij7W8G9kbEUmBv\n2jczs5JpZI1+HbAtbW8Dvth4HDMzy9tIC30Az0s6lL4DFmB+RJwBSJfzBruhpE2SDko6eO78xcYT\nm5nZNRnpm7FrIqJP0jxgj6QTI+0gIrYCWwE6bp16xZeHm5lZc43oGX1E9KXLfmAnsBI4K6kNIF32\nNyukmZmN3rCFXtJ0STNq28DdQBfZF4FvTIdtBJ5pVkgzMxu9kSzdzAd2Sqod/3hE/EnSAeBJSQ8C\nbwFfal5MG8x4OTd8uHOuh7t+vPyedpnHrFyGLfQR8QZw6yDt54E7mxHKzMzy43+BYGZWcS70ZmYV\n50JvZlZxLvRmZhXnQm9mVnEu9GZmFedCb2ZWcYoo7t/PSPoAOFlYh6M3B3hnrEOMgHPmZzxkBOfM\n23jJuSwiZoz2xkV/w9TJuv9nX1qSDjpnfsZDzvGQEZwzb+MpZyO399KNmVnFudCbmVVc0YV+a8H9\njZZz5ms85BwPGcE58zYhchb6ZqyZmRXPSzdmZhVXWKGXdK+kk5K6JW0uqt8hsjwmqV9SV13bLEl7\nJL2WLm9M7ZL0s5T7qKQVBWVcJOlFScclHZP0nZLmnCppv6QjKefDqX2xpH0p5w5Jral9StrvTte3\nF5Ez9d0i6WVJu8uaMfXfI+kVSYdrZ1uUcNxnSnpK0ok0R1eXMOOydB/Wft6X9FDZcqa+v5seP12S\ntqfHVX7zMyKa/gO0AK8DS4BW4AhwcxF9D5HnDmAF0FXX9mNgc9reDPwoba8FngMErAL2FZSxDViR\ntmcAp4CbS5hTwPVpezKwL/X/JLA+tT8KfCNtfxN4NG2vB3YUOO7fAx4Hdqf90mVMffYAcwa0lW3c\ntwFfT9utwMyyZRyQtwV4G/h42XICC4A3gevq5uXX8pyfRd3Jq4HOuv0twJaiB3tApnb+v9CfBNrS\ndhvZOf8AvwQ2DHZcwXmfAe4qc05gGvAScDvZh1AmDRx/oBNYnbYnpeNUQLaFwF7gc8Du9GAuVca6\nrD1cWehLM+7AR1NhUlkzDpL5buAvZcxJVuhPA7PSfNsN3JPn/Cxq6ab2i9T0prYymR8RZwDS5bzU\nPubZ00uz28ieLZcuZ1oSOUz2BfF7yF69vRsRFwbJcilnuv49YHYBMR8Bvg/8N+3PLmHGmgCel3RI\n0qbUVqZxXwKcA36TlsJ+pez7pMuUcaD1wPa0XaqcEfE34CdkX8l6hmy+HSLH+VlUodcgbePldJ8x\nzS7peuAPwEMR8f7VDh2krZCcEXExIpaTPWteCXzyKlkKzynpC0B/RByqb75KjrGer2siYgVwH/At\nSXdc5dixyDqJbOnzFxFxG/BPsiWQoYz1Y6gVuB/4/XCHDtLW9JzpPYJ1wGLgJmA62dgPleWacxZV\n6HuBRXX7C4G+gvoeqbOS2gDSZX9qH7PskiaTFfnfRcTTZc1ZExHvAn8mW9+cKan2Lzbqs1zKma6/\nAfh7k6OtAe6X1AM8QbZ880jJMl4SEX3psh/YSfbHs0zj3gv0RsS+tP8UWeEvU8Z69wEvRcTZtF+2\nnJ8H3oyIcxHxIfA08ClynJ9FFfoDwNL0LnIr2cuoXQX1PVK7gI1peyPZmnit/avpHflVwHu1l33N\nJEnAr4HjEfHTEuecK2lm2r6ObNIeB14EHhgiZy3/A8ALkRYbmyUitkTEwohoJ5t7L0TEV8qUsUbS\ndEkzattka8tdlGjcI+Jt4LSkZanpTuDVMmUcYAOXl21qecqU8y1glaRp6XFfuz/zm58FvhmyluzM\nkdeBHxTV7xBZtpOthX1I9tfxQbI1rr3Aa+lyVjpWwM9T7leAjoIyfprs5dhR4HD6WVvCnLcAL6ec\nXcAPU/sSYD/QTfaSeUpqn5r2u9P1Swoe+89w+ayb0mVMmY6kn2O1x0oJx305cDCN+x+BG8uWMfU9\nDTgP3FDXVsacDwMn0mPot8CUPOenPxlrZlZx/mSsmVnFudCbmVWcC72ZWcW50JuZVZwLvZlZxbnQ\nm5lVnAu9mVnFudCbmVXc/wAkf5raWbxgswAAAABJRU5ErkJggg==\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x7f4088387e80>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "plt.imshow((np.sum(U, axis=1).reshape((80,800), order = 'F') == 4) +\\\n",
+    "           (np.sum(U, axis=1).reshape((80,800), order = 'F') == 3) + \\\n",
+    "           (np.sum(U, axis=1).reshape((80,800), order = 'F') == 2) + \\\n",
+    "           (np.sum(U, axis=1).reshape((80,800), order = 'F') == 1) + \\\n",
+    "           (np.sum(U, axis=1).reshape((80,800), order = 'F') == 0))\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
